<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.External.ForgotPassword">

    <VideoView
        android:id="@+id/VideoView4"
        android:layout_width="471dp"
        android:layout_height="835dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="250dp"
        android:layout_height="116dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="209dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/sf_ui_display_black"
        android:text="@string/tv4"
        android:textColor="#FCF9F9"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="273dp"
        android:layout_height="65dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/sf_ui_display_black"
        android:hint="@string/h"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:text="@string/rt6"
        android:textColorHint="#FCFAFA"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="308dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/sf_ui_display_black"
        android:text="@string/TV7"
        android:textColor="#F8FCF6F6"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="@+id/editText6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="54dp"
        android:layout_height="59dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/arrow2"
        android:onClick="send_password_email_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />
</androidx.constraintlayout.widget.ConstraintLayout>