<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.External.CreateNewAccount">

    <VideoView
        android:id="@+id/VideoView2"
        android:layout_width="558dp"
        android:layout_height="908dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/sf_ui_display_black"
        android:hint="@string/new_username_hint"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#FCFAFA"
        android:textColorHint="#F5F0F0"
        app:layout_constraintEnd_toEndOf="@+id/editText4"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/sf_ui_display_black"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#FCFAFA"
        android:textColorHint="#F5F0F0"
        app:layout_constraintBottom_toTopOf="@+id/VideoView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="181dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="256dp"
        android:fontFamily="@font/sf_ui_display_black"
        android:text="@string/txt_create_account"
        android:textColor="#F8F4F4"
        android:textColorHint="#FDFDFD"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/sf_ui_display_black"
        android:hint="@string/Display_Name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#FCFBFB"
        android:textColorHint="#F5F0F0"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="200dp"
        android:layout_height="126dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="102dp"
        android:fontFamily="@font/sf_ui_display_black"
        android:text="@string/check"
        android:textColor="#F5F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="57dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/arrow2"
        android:onClick="create_account_btn"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/checkBox" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>