<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomSheet">


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="201dp"
        android:fontFamily="@font/sf_ui_display_black"
        android:text="@string/txt_tst"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText12"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="91dp"
        android:src="@drawable/ic_credit_card"
        app:layout_constraintBottom_toBottomOf="@+id/editText10"
        app:layout_constraintEnd_toStartOf="@+id/editText7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/tststs"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="156dp"
        android:fontFamily="@font/sf_ui_display_black"
        android:text="@string/exp_date"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/countryCodePicker2"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="58dp"
        android:layout_height="31dp"
        android:fontFamily="@font/sf_ui_display_black"
        android:text="@string/CVV"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText10"
        app:layout_constraintStart_toStartOf="@+id/editText10" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="123"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText9"
        app:layout_constraintTop_toBottomOf="@+id/editText7"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/sf_ui_display_black"
        android:text="Country"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/countryCodePicker2"
        app:layout_constraintStart_toStartOf="@+id/editText9" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryCodePicker2"
        android:layout_width="151dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/editText12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="188dp"
        android:layout_height="39dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/Phn"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/imageButton9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/countryCodePicker2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="159dp"
        android:layout_height="53dp"
        android:layout_marginBottom="287dp"
        android:background="@null"
        android:src="@drawable/red_fill__rounded_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/sf_ui_display_black"
        android:text="Done"
        android:textColor="#EEE7E7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton9" />

</androidx.constraintlayout.widget.ConstraintLayout>